progs/tests/blob/faulty_num_arguments.sy
A :: blob {
    a: int
    b: int
}

start :: fn {
    a :: A! { a: 1, b: 2, c: 3 }
    a
}

// error: #UnknownField(_, _)
